# MyWayCLI

./: CHANGELOG.md  CHANGELOG.txt  Cargo.toml  README.md
src/: main.rs
src/cli/: args.rs  commands.rs  matches.rs
src/core/: errors.rs  filemanager.rs  project.rs
src/log/: log.rs
