[package]
name = "myway-cli"
version = "1.0.0"
authors = ["Gabriel Xavier <dotxavket@gmail.com>"]
edition = "2024"
description = "A High perfomance and minimalist project manager CLI to organize your projects and ideas."
license = "MIT"
repository = "https://github.com/G4brielXavier/myway"
readme = "README.md"
keywords = ["cli", "workflow", "productivity", "management"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5.60", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
indexmap = { version = "2.0", features = ["serde"] }
colored = "3.1.1"
tequel-rs = { version = "1.2.0", features = ["serde"] }
chrono = "0.4"
regex = "1"
dirs = "6.0"
reqwest = { version = "0.13.2", features = ["json", "blocking"] }
semver = "1.0"
memmap2 = "0.9"

[[bin]]
name = "mw"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"